plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'



    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.9.2'
}


test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
jacoco {
    toolVersion = "0.8.7"
}

test {
    jacoco {
        enabled = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.8
            }
        }
    }
}
tasks.withType(Test).configureEach {
    jacoco {
        excludes += ['com.example.projetotestesjunit5.infrastructure.*',
                     'com.example.projetotestesjunit5.api.*',
                     'com.example.projetotestesjunit5.infrastructure.exception.*']

    }
}

